Fixed title spacing

--- a/personalWebApp/src/App.css
+++ b/personalWebApp/src/App.css
@@ -8,3 +8,10 @@
   display: inline-block;
   margin-left: 4em;
 }
+
+h1 {
+  margin-bottom: 0px;
+}
+h2 {
+  margin-top: 5px;
+}
